--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "compression-webpack-plugin": "^1.0.1",
+    "copy-webpack-plugin": "^4.2.0",
     "copyfiles": "^1.2.0",
     "css-loader": "^0.28.7",
     "eslint-loader": "^1.9.0",
