--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
 "globals": {
     "document": true,
     "window": true,
-    "Promise": true
+    "Promise": true,
+    "Uint8Array": true
 },
     "parser": "babel-eslint",
     "parserOptions": {
